[metadata]
name = KeyStorage
version = 0.2
author = Francisco Carvajal Ossa
author_email = fraco_oxza@outlook.com
description = a simple program to manage passwords
long_description = file: README.md
long_description_content_type = text/markdown
url = None
classifiers =
    Programing Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.6
